@@ -1,3 +1,4 @@
+8/27/12 SlopeInterceptModel extends PointSlopeModel
 8/27/12 first step in collapsing LineFormsModel hierarchy
 8/27/12 move more responsibility into LineFormsModel, since slope-intercept is a special case of point-slope
 8/27/12 delete InterceptDragHandler, it's a special case of PointDragHandler with x1 fixed at zero
